fix login box on mobile

--- a/src/frontend/css/header.css
+++ b/src/frontend/css/header.css
@@ -132,7 +132,8 @@
     color: black;
     background: white;
     padding: 1em;
-    width: 500px;
+    width: 100%;
+    max-width: 500px;
     display: flex;
 
     form {
